--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">I Am Poor</string>
+    <string name="heading">I Am Poor</string>
+    <string name="owner">Designed by Luke </string>
 </resources>
